# tidb-engine-ext

./: .gitignore  .gitmodules  Cargo.toml  Makefile  OWNERS_ALIASES  build.rs  build.sh  cargo-build.sh  ci-build  ci_check.sh  doc  fuzz  gen-proxy-ffi.sh  images  r.sh  readme.md  release.sh  security
.github/: licenserc.yml
.github/workflows/: ci-test.sh  license-checker.yml  pr-ci.yaml  pr-ci.yml
cmd/src/: server.rs
components/: api_version  backup  case_macros  cloud  codec  collections  concurrency_manager  coprocessor_plugin_api  engine_panic  engine_test  engine_traits  engine_traits_tests  external_storage  file_system  into_other  keys  log_wrappers  match_template  memory_trace_macros  online_config  panic_hook  profiler  raft_log_engine  resolved_ts  resource_metering  security  test_backup  test_coprocessor  test_coprocessor_plugin  test_pd  test_sst_importer  test_storage  tidb_query_aggr  tidb_query_codegen  tidb_query_common  tidb_query_datatype  tidb_query_executors  tidb_query_expr  tikv_alloc  tikv_kv  (+2 more)
components/backup-stream/src/: endpoint.rs  event_loader.rs  observer.rs  router.rs  subscription_track.rs  utils.rs
components/backup-stream/tests/: mod.rs
components/backup/src/: endpoint.rs  utils.rs  writer.rs
components/batch-system/src/: batch.rs  config.rs  router.rs
components/causal_ts/src/: lib.rs  observer.rs
components/cdc/src/: delegate.rs  endpoint.rs  initializer.rs  metrics.rs  observer.rs
components/concurrency_manager/src/: lock_table.rs
components/coprocessor_plugin_api/src/: lib.rs
components/encryption/src/: crypter.rs  io.rs
components/engine_panic/src/: raft_engine.rs
components/engine_rocks/src/: compact.rs  engine.rs  import.rs  lib.rs  misc.rs  raft_engine.rs  sst.rs
components/engine_store_ffi/: Cargo.toml
components/engine_store_ffi/src/: interfaces.rs  lib.rs  observer.rs  ps_engine.rs
components/engine_test/src/: lib.rs
components/engine_traits/src/: engine.rs  raft_engine.rs
components/external_storage/src/: lib.rs  local.rs
components/file_system/src/: lib.rs
components/hybrid_engine/: Cargo.toml
components/keys/src/: lib.rs
components/online_config/src/: lib.rs
components/pd_client/src/: tso.rs
components/proxy_server/: Cargo.toml
components/proxy_server/src/: config.rs  lib.rs  proxy.rs  run.rs  setup.rs  status_server.rs
components/raft_log_engine/src/: engine.rs  lib.rs
components/raftstore/: Cargo.toml  build.rs
components/raftstore/src/: lib.rs  router.rs
components/region_cache_memory_engine/: Cargo.toml
components/security/src/: lib.rs
components/server/: Cargo.toml
components/test_raftstore/: Cargo.toml
doc/: new-proxy.md
engine_store_ffi/: Cargo.toml
engine_store_ffi/src/: ffihub_impl.rs  interfaces.rs  lib.rs  observer.rs  ps_engine.rs  sst_reader_impls.rs
engine_tiflash/: Cargo.toml
engine_tiflash/src/: cached_region_info_manager.rs  cf_options.rs  compact.rs  db_options.rs  db_vector.rs  encryption.rs  engine.rs  file_system.rs  import.rs  lib.rs  misc.rs  perf_context_impl.rs  proxy_utils.rs  ps_write_batch.rs  raft_engine.rs  raw_util.rs  sst.rs  write_batch.rs
etc/: config-template.toml
gen-proxy-ffi/: Cargo.toml  bin.rs
gen-proxy-ffi/src/: lib.rs
metrics/grafana/: tikv_details.json
mock-engine-store/: Cargo.toml
mock-engine-store/src/: lib.rs
new-mock-engine-store/: Cargo.toml
new-mock-engine-store/src/: config.rs  lib.rs  mock_cluster.rs  mock_page_storage.rs  mock_store.rs  node.rs  server.rs  transport_simulate.rs  utils.rs
new-mock-engine-store/src/mock_store/: common.rs  mock_core.rs  mock_engine_store_server.rs  mock_fast_add_peer.rs  mock_fast_add_peer_impls.rs  mock_ffi.rs  mock_snapshot_impls.rs  mock_write_impls.rs  mod.rs
proxy_components/engine_store_ffi/: Cargo.toml
proxy_components/engine_tiflash/: Cargo.toml
proxy_components/mock-engine-store/: Cargo.toml
proxy_components/proxy_ffi/: Cargo.toml
proxy_components/proxy_server/: Cargo.toml
proxy_ffi/: Cargo.toml
proxy_ffi/src/: apply_router_helper.rs  domain_impls.rs  engine_store_helper_impls.rs  interfaces.rs  lib.rs  raftstore_proxy.rs  raftstore_proxy_helper_impls.rs  sst_reader_impls.rs
proxy_scripts/: ci_check.sh
proxy_server/: Cargo.toml
proxy_server/src/: config.rs  hacked_lock_mgr.rs  lib.rs  proxy.rs  run.rs  setup.rs  status_server.rs
proxy_tests/: Cargo.toml  last_tikv.toml
proxy_tests/proxy/: config.rs  engine.rs  fast_add_peer.rs  ffi.rs  flashback.rs  ingest.rs  mod.rs  normal.rs  proxy.rs  region.rs  replica_read.rs  server_cluster_test.rs  snapshot.rs  tablet_snapshot.rs  write.rs
raftstore-proxy/: Cargo.toml
raftstore-proxy-main/: Cargo.toml
raftstore-proxy-main/src/: main.rs
raftstore-proxy/ffi/src/RaftStoreProxyFFI/: @version  ColumnFamily.h  Common.h  EncryptionFFI.h  ProxyFFI.h  Symbolization.h  VersionCheck.h
raftstore-proxy/src/: lib.rs  object.rs
scripts/: test
src/: config.rs  lib.rs  read_pool.rs
src/coprocessor/: endpoint.rs  mod.rs  tracker.rs
src/import/: sst_service.rs
src/server/: config.rs  debug.rs  metrics.rs  node.rs  raft_client.rs  reset_to_version.rs  server.rs  snap.rs
src/storage/: config.rs  config_manager.rs  errors.rs  mod.rs
tests/: Cargo.toml
tests/failpoints/cases/: mod.rs  test_bootstrap.rs  test_compact_log.rs  test_conf_change.rs  test_disk_full.rs  test_early_apply.rs  test_gc_worker.rs  test_import_service.rs  test_merge.rs  test_normal.rs  test_proxy.rs  test_proxy_replica_read.rs  test_replica_read.rs  test_server.rs  test_snap.rs  test_split_region.rs  test_storage.rs  test_unsafe_recovery.rs
tests/integrations/: mod.rs
tests/integrations/raftstore/: mod.rs  test_batch_read_index.rs  test_bootstrap.rs  test_compact_lock_cf.rs  test_early_apply.rs  test_hibernate.rs  test_merge.rs  test_replication_mode.rs  test_single.rs  test_snap.rs  test_split_region.rs  test_unsafe_recovery.rs
tests/integrations/server/: kv_service.rs  lock_manager.rs  status_server.rs
tests/proxy/: mod.rs  normal.rs  proxy.rs  server_cluster_test.rs  test_normal.rs  test_proxy.rs
(+284 files in other folders)
