[package]
name = "gen-proxy-ffi"
version = "0.1.0"
authors = ["Tong Zhigao <tongzhigao@pingcap.com>"]
edition = "2018"

[[bin]]
name = "gen-proxy-ffi"

[dependencies.bindgen]
version = "0.57.0"
default-features = false
features = ["which-rustfmt"]

[dependencies]
walkdir = "2"
md5 = "0.7"
clap = "2.33"
