[package]
name = "new-mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "new_mock_engine_store"

[features]
default = ["protobuf-codec"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]

[dependencies]
engine_rocks = { path = "../components/engine_rocks", default-features = false }
engine_test = { path = "../components/engine_test", default-features = false }
engine_traits = { path = "../components/engine_traits", default-features = false }
fail = "0.5"
keys = { path = "../components/keys", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
protobuf = "2.8.0"
raftstore = { path = "../components/raftstore", default-features = false }
server = { path = "../components/server" }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tikv_util = { path = "../components/tikv_util", default-features = false }


lazy_static = "1.3"
tempfile = "3.0"
file_system = { path = "../components/file_system", default-features = false }
test_raftstore = { path = "../components/test_raftstore" }
collections = { path = "../components/collections", default-features = false }
concurrency_manager = { path = "../components/concurrency_manager", default-features = false }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
resource_metering = { path = "../components/resource_metering" }
encryption_export = { path = "../components/encryption/export", default-features = false }
tikv = { path = "../.", default-features = false }
encryption = { path = "../components/encryption", default-features = false }
test_util = { path = "../components/test_util", default-features = false }
crossbeam = "0.8"
rand = "0.8"
api_version = { path = "../components/api_version", default-features = false }
pd_client = { path = "../components/pd_client", default-features = false }