[package]
name = "hybrid_engine"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
testexport = []

[dependencies]
engine_rocks = { workspace = true }
engine_traits = { workspace = true }
lazy_static = "1.4.0"
prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
prometheus-static-metric = "0.5"
region_cache_memory_engine = { workspace = true }
tempfile = "3.0"
tikv_util = { workspace = true }
txn_types = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
