[package]
name = "proxy_server"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
snmalloc = ["tikv/snmalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]

cloud-aws = ["encryption_export/cloud-aws"]
cloud-gcp = ["encryption_export/cloud-gcp"]
cloud-azure = ["encryption_export/cloud-azure"]
test-engine-kv-rocksdb = [
  "tikv/test-engine-kv-rocksdb"
]
test-engine-raft-raft-engine = [
  "tikv/test-engine-raft-raft-engine"
]
test-engines-rocksdb = [
  "tikv/test-engines-rocksdb",
]
test-engines-panic = [
  "tikv/test-engines-panic",
]
nortcheck = ["engine_rocks/nortcheck"]
backup-stream-debug = ["backup-stream/backup-stream-debug"]

[dependencies]
api_version = { git = "https://github.com/tikv/tikv.git" }
async-stream = "0.2"
backup = { git = "https://github.com/tikv/tikv.git", default-features = false }
backup-stream = { git = "https://github.com/tikv/tikv.git", default-features = false }
causal_ts = { git = "https://github.com/tikv/tikv.git" }
chrono = "0.4"
clap = "2.32"
collections = { git = "https://github.com/tikv/tikv.git" }
concurrency_manager = { git = "https://github.com/tikv/tikv.git", default-features = false }
crossbeam = "0.8"
encryption = { git = "https://github.com/tikv/tikv.git", default-features = false }
encryption_export = { git = "https://github.com/tikv/tikv.git", default-features = false }
engine_rocks = { git = "https://github.com/tikv/tikv.git", default-features = false }
engine_rocks_helper = { git = "https://github.com/tikv/tikv.git" }
engine_store_ffi = { path = "../engine_store_ffi", default-features = false }
engine_traits = { git = "https://github.com/tikv/tikv.git", default-features = false }
error_code = { git = "https://github.com/tikv/tikv.git", default-features = false }
fail = "0.5"
file_system = { git = "https://github.com/tikv/tikv.git", default-features = false }
fs2 = "0.4"
futures = "0.3"
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored"] }
grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
itertools = "0.10"
keys = { git = "https://github.com/tikv/tikv.git", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { git = "https://github.com/tikv/tikv.git" }
mime = "0.3.13"
nix = "0.23"
online_config = { git = "https://github.com/tikv/tikv.git" }

openssl = "0.10"
pd_client = { git = "https://github.com/tikv/tikv.git", default-features = false }
pin-project = "1.0"
pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "3fed55af8fc6cf69dbd954a0321c799c5a111e4e", default-features = false, features = ["flamegraph", "protobuf-codec"] }
prometheus = { version = "0.13", features = ["nightly"] }
protobuf = { version = "2.8", features = ["bytes"] }
raft_log_engine = { git = "https://github.com/tikv/tikv.git", default-features = false }
raftstore = { git = "https://github.com/tikv/tikv.git", default-features = false }
rand = "0.8"
regex = "1.3"
resolved_ts = { git = "https://github.com/tikv/tikv.git", default-features = false }
resource_metering = { git = "https://github.com/tikv/tikv.git" }
security = { git = "https://github.com/tikv/tikv.git", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
serde_with = "1.4"
server = { git = "https://github.com/tikv/tikv.git", default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tempfile = "3.0"
tikv = { git = "https://github.com/tikv/tikv.git", default-features = false }
tikv_alloc = { git = "https://github.com/tikv/tikv.git" }
tikv_util = { git = "https://github.com/tikv/tikv.git", default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-openssl = "0.6"
toml = "0.5"
txn_types = { git = "https://github.com/tikv/tikv.git", default-features = false }
url = "2"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }

[target.'cfg(unix)'.dependencies]
signal = "0.6"
